--- a/simple_identification/facerecognition.ipynb
+++ b/simple_identification/facerecognition.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "id": "5010ef70",
       "metadata": {
         "id": "5010ef70"
@@ -40,10 +40,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xRIoWjUzlVX4",
-        "outputId": "8b571dc0-27de-4bb8-e5f4-32ad09f9c641"
+        "outputId": "4a314b8b-9ed6-4b56-dbfa-173c94060338"
       },
       "id": "xRIoWjUzlVX4",
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -51,7 +51,7 @@
           "text": [
             "Collecting insightface\n",
             "  Downloading insightface-0.7.3.tar.gz (439 kB)\n",
-            "\u001b[?25l     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/439.5 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K     \u001b[91m━━━━━━\u001b[0m\u001b[91m╸\u001b[0m\u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m71.7/439.5 kB\u001b[0m \u001b[31m2.3 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K     \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m\u001b[90m━━━━━━━\u001b[0m \u001b[32m358.4/439.5 kB\u001b[0m \u001b[31m5.1 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m439.5/439.5 kB\u001b[0m \u001b[31m5.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25l     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/439.5 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K     \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[90m╺\u001b[0m \u001b[32m430.1/439.5 kB\u001b[0m \u001b[31m13.6 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m439.5/439.5 kB\u001b[0m \u001b[31m8.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h  Installing build dependencies ... \u001b[?25l\u001b[?25hdone\n",
             "  Getting requirements to build wheel ... \u001b[?25l\u001b[?25hdone\n",
             "  Preparing metadata (pyproject.toml) ... \u001b[?25l\u001b[?25hdone\n",
@@ -100,10 +100,10 @@
             "Requirement already satisfied: typing-inspection>=0.4.0 in /usr/local/lib/python3.11/dist-packages (from pydantic>=2.9.2->albumentations->insightface) (0.4.1)\n",
             "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.11/dist-packages (from python-dateutil>=2.7->matplotlib->insightface) (1.17.0)\n",
             "Downloading onnx-1.18.0-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (17.6 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m17.6/17.6 MB\u001b[0m \u001b[31m101.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m17.6/17.6 MB\u001b[0m \u001b[31m116.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hBuilding wheels for collected packages: insightface\n",
             "  Building wheel for insightface (pyproject.toml) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for insightface: filename=insightface-0.7.3-cp311-cp311-linux_x86_64.whl size=1060440 sha256=2c3bf2ccb23f9f00c656237f177ae20a0a8ccc418a620e8f4fbd415e4761b0f7\n",
+            "  Created wheel for insightface: filename=insightface-0.7.3-cp311-cp311-linux_x86_64.whl size=1060437 sha256=c07b5e84fc96438356b62a388865d43c4946bccbf25897ef9219fd63cc99e57d\n",
             "  Stored in directory: /root/.cache/pip/wheels/27/d8/22/f52d858d16cd06e7b2e6aad34a1777dcfaf000be833bbf8146\n",
             "Successfully built insightface\n",
             "Installing collected packages: onnx, insightface\n",
@@ -121,11 +121,11 @@
             "  Downloading humanfriendly-10.0-py2.py3-none-any.whl.metadata (9.2 kB)\n",
             "Requirement already satisfied: mpmath<1.4,>=1.1.0 in /usr/local/lib/python3.11/dist-packages (from sympy->onnxruntime) (1.3.0)\n",
             "Downloading onnxruntime-1.22.1-cp311-cp311-manylinux_2_27_x86_64.manylinux_2_28_x86_64.whl (16.5 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m16.5/16.5 MB\u001b[0m \u001b[31m82.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m16.5/16.5 MB\u001b[0m \u001b[31m121.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading coloredlogs-15.0.1-py2.py3-none-any.whl (46 kB)\n",
             "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m46.0/46.0 kB\u001b[0m \u001b[31m4.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading humanfriendly-10.0-py2.py3-none-any.whl (86 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m86.8/86.8 kB\u001b[0m \u001b[31m8.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m86.8/86.8 kB\u001b[0m \u001b[31m8.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hInstalling collected packages: humanfriendly, coloredlogs, onnxruntime\n",
             "Successfully installed coloredlogs-15.0.1 humanfriendly-10.0 onnxruntime-1.22.1\n"
           ]
@@ -134,39 +134,39 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "id": "864afe6f",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "864afe6f",
-        "outputId": "87953d87-d5ec-4356-f78e-09e3656a5a06"
+        "outputId": "31b71210-8078-4b51-c3b8-78f0c6357857"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2025-07-24 12:31:16--  https://www.dropbox.com/scl/fi/b9y03enpi01zfb36ckyir/personas.zip?rlkey=19wypqmaps5b5n28bz3gi7xg7&st=s6p3564g&dl=0\n",
-            "Resolving www.dropbox.com (www.dropbox.com)... 162.125.13.18, 2620:100:601c:18::a27d:612\n",
-            "Connecting to www.dropbox.com (www.dropbox.com)|162.125.13.18|:443... connected.\n",
+            "--2025-07-24 18:22:07--  https://www.dropbox.com/scl/fi/b9y03enpi01zfb36ckyir/personas.zip?rlkey=19wypqmaps5b5n28bz3gi7xg7&st=s6p3564g&dl=0\n",
+            "Resolving www.dropbox.com (www.dropbox.com)... 162.125.1.18, 2620:100:6016:18::a27d:112\n",
+            "Connecting to www.dropbox.com (www.dropbox.com)|162.125.1.18|:443... connected.\n",
             "HTTP request sent, awaiting response... 302 Found\n",
-            "Location: https://uc6cc6c508f693f20495c4b543bb.dl.dropboxusercontent.com/cd/0/inline/CuE72a32sBNaF3QGx0a6yGqgK92_FchhC432kyI-xNSyMEOjH6Bi-cgGdtxoXgfYrn0gFKMn_c4Te7VOPJ00U3fJLVWZqWNmdtbT7KBv8xJO77wDdukbnm1VIr85Isa9_6fRARiYjSjd8YKubxrWxXFD/file# [following]\n",
-            "--2025-07-24 12:31:16--  https://uc6cc6c508f693f20495c4b543bb.dl.dropboxusercontent.com/cd/0/inline/CuE72a32sBNaF3QGx0a6yGqgK92_FchhC432kyI-xNSyMEOjH6Bi-cgGdtxoXgfYrn0gFKMn_c4Te7VOPJ00U3fJLVWZqWNmdtbT7KBv8xJO77wDdukbnm1VIr85Isa9_6fRARiYjSjd8YKubxrWxXFD/file\n",
-            "Resolving uc6cc6c508f693f20495c4b543bb.dl.dropboxusercontent.com (uc6cc6c508f693f20495c4b543bb.dl.dropboxusercontent.com)... 162.125.13.15, 2620:100:6057:15::a27d:d0f\n",
-            "Connecting to uc6cc6c508f693f20495c4b543bb.dl.dropboxusercontent.com (uc6cc6c508f693f20495c4b543bb.dl.dropboxusercontent.com)|162.125.13.15|:443... connected.\n",
+            "Location: https://uc876642a8842bcfff6e499e7174.dl.dropboxusercontent.com/cd/0/inline/CuHKfcmH-D_fuMdlpMzV29iW4BsupsYykq3QXtGC3RtkQyQ8AbQf2JkossZ7F31HNPAJDVEAsbaw4snXoUHmleUO0GQBzL4g7z9bR7TzlAuLLTS0QRvhKQEV1E4fLhOH7-czDRmYj5qYnRuetHWj1kZF/file# [following]\n",
+            "--2025-07-24 18:22:08--  https://uc876642a8842bcfff6e499e7174.dl.dropboxusercontent.com/cd/0/inline/CuHKfcmH-D_fuMdlpMzV29iW4BsupsYykq3QXtGC3RtkQyQ8AbQf2JkossZ7F31HNPAJDVEAsbaw4snXoUHmleUO0GQBzL4g7z9bR7TzlAuLLTS0QRvhKQEV1E4fLhOH7-czDRmYj5qYnRuetHWj1kZF/file\n",
+            "Resolving uc876642a8842bcfff6e499e7174.dl.dropboxusercontent.com (uc876642a8842bcfff6e499e7174.dl.dropboxusercontent.com)... 162.125.1.15, 2620:100:6016:15::a27d:10f\n",
+            "Connecting to uc876642a8842bcfff6e499e7174.dl.dropboxusercontent.com (uc876642a8842bcfff6e499e7174.dl.dropboxusercontent.com)|162.125.1.15|:443... connected.\n",
             "HTTP request sent, awaiting response... 302 Found\n",
-            "Location: /cd/0/inline2/CuF84Dnyw1b-AT4WsZNtKfikEJ_tnujFyQipGIzjuAAjJEj8vZTHyfbYJbUx-7zmommFIdX60hERk3Rfbyh1RVEacL50JKBCi3-U38EXCXpLh8XGUJ6YfowI0lAcUHETVkm5doDdVRJYlKnht2QbooNBPEKkkzpjxNV2zZFDc7W1Zi0c94gm2pUwJw5xJ1lQgqn5EZdePt6hsBZXXZhzRMlhzgGoc7eDlsKNsNKrV2gCgRGSH4Outs-_bDkt0TZYifV-kjx7MrhW-ZeRmnkFCb1OFyKok34PZUoAe718GmcFJbKv0oYJJJNicBwDLOWIEElgEafwxzXpmjwFGYuJedVL4iP86sHKkE1CbVtOJCtQ_iQBwuw9cNB9Bkw-KvnZuGM/file [following]\n",
-            "--2025-07-24 12:31:17--  https://uc6cc6c508f693f20495c4b543bb.dl.dropboxusercontent.com/cd/0/inline2/CuF84Dnyw1b-AT4WsZNtKfikEJ_tnujFyQipGIzjuAAjJEj8vZTHyfbYJbUx-7zmommFIdX60hERk3Rfbyh1RVEacL50JKBCi3-U38EXCXpLh8XGUJ6YfowI0lAcUHETVkm5doDdVRJYlKnht2QbooNBPEKkkzpjxNV2zZFDc7W1Zi0c94gm2pUwJw5xJ1lQgqn5EZdePt6hsBZXXZhzRMlhzgGoc7eDlsKNsNKrV2gCgRGSH4Outs-_bDkt0TZYifV-kjx7MrhW-ZeRmnkFCb1OFyKok34PZUoAe718GmcFJbKv0oYJJJNicBwDLOWIEElgEafwxzXpmjwFGYuJedVL4iP86sHKkE1CbVtOJCtQ_iQBwuw9cNB9Bkw-KvnZuGM/file\n",
-            "Reusing existing connection to uc6cc6c508f693f20495c4b543bb.dl.dropboxusercontent.com:443.\n",
+            "Location: /cd/0/inline2/CuHWC4tWebHaLMBwrT6ANXuYw3EVmd94LIsokk3nwSG2gR8_5mfZTRygdF58lSKr7u7GZpoYve26JL2D6WKW8WG693BVpUnUCDSrYk5pa5tqRhKqS6aBQnqSvh_L9L8mWv0NyL_awOuo5cq5zYcM5UMx66EeEnB7slENAoEMmsdc0AQYXCdfi8vUt0Zz57zjsNZmMPkhQoHRIJvAtrPmfUsQRNjT8Lck03-VBK2JKg2sAZV3vejpDS698D-0QHbqwtC_7COS2NKknMAlsLOZLBTLy-aOhH9s4-7U4Ft_QqDSU-Pq0tnJhiyVkSHS0789FZxYmo5zxedAg-rhQDkSpklKfKcD9lm08A2VxwKGPKBouUvwMC6nHQwOnftcokNqWxo/file [following]\n",
+            "--2025-07-24 18:22:08--  https://uc876642a8842bcfff6e499e7174.dl.dropboxusercontent.com/cd/0/inline2/CuHWC4tWebHaLMBwrT6ANXuYw3EVmd94LIsokk3nwSG2gR8_5mfZTRygdF58lSKr7u7GZpoYve26JL2D6WKW8WG693BVpUnUCDSrYk5pa5tqRhKqS6aBQnqSvh_L9L8mWv0NyL_awOuo5cq5zYcM5UMx66EeEnB7slENAoEMmsdc0AQYXCdfi8vUt0Zz57zjsNZmMPkhQoHRIJvAtrPmfUsQRNjT8Lck03-VBK2JKg2sAZV3vejpDS698D-0QHbqwtC_7COS2NKknMAlsLOZLBTLy-aOhH9s4-7U4Ft_QqDSU-Pq0tnJhiyVkSHS0789FZxYmo5zxedAg-rhQDkSpklKfKcD9lm08A2VxwKGPKBouUvwMC6nHQwOnftcokNqWxo/file\n",
+            "Reusing existing connection to uc876642a8842bcfff6e499e7174.dl.dropboxusercontent.com:443.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 1315412 (1.3M) [application/zip]\n",
             "Saving to: ‘personas.zip’\n",
             "\n",
-            "personas.zip        100%[===================>]   1.25M  --.-KB/s    in 0.1s    \n",
+            "personas.zip        100%[===================>]   1.25M  --.-KB/s    in 0.05s   \n",
             "\n",
-            "2025-07-24 12:31:17 (10.4 MB/s) - ‘personas.zip’ saved [1315412/1315412]\n",
+            "2025-07-24 18:22:08 (27.0 MB/s) - ‘personas.zip’ saved [1315412/1315412]\n",
             "\n"
           ]
         }
@@ -187,10 +187,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7H_BhHsRmkjj",
-        "outputId": "c5463048-7326-448f-ddf6-fec5f987aec9"
+        "outputId": "155122c5-fa80-4951-f176-0ae589980300"
       },
       "id": "7H_BhHsRmkjj",
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -227,25 +227,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "id": "d4de11e6",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "d4de11e6",
-        "outputId": "b60665ce-114d-458a-921a-66ee3160fe75"
+        "outputId": "63d93f51-0ed6-4462-8f65-d1cabafbe5f3"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "{'paulina': 0, 'dicaprio': 1, 'barack': 2, 'pancho': 3, 'thalia': 4, 'mario': 5, 'michelle': 6}\n"
+            "{'paulina': 0, 'dicaprio': 1, 'barack': 2, 'pancho': 3, 'thalia': 4, 'mario': 5, 'michelle': 6}\n",
+            "[{'path': '/content/personas/paulina/paulina2.png', 'name': 'paulina', 'emb': []}, {'path': '/content/personas/paulina/paulina1.jpeg', 'name': 'paulina', 'emb': []}, {'path': '/content/personas/dicaprio/dicaprio_2.png', 'name': 'dicaprio', 'emb': []}, {'path': '/content/personas/dicaprio/dicaprio.jpg', 'name': 'dicaprio', 'emb': []}, {'path': '/content/personas/barack/barack.jpeg', 'name': 'barack', 'emb': []}, {'path': '/content/personas/barack/barack_2.jpeg', 'name': 'barack', 'emb': []}, {'path': '/content/personas/barack/face_2.jpeg', 'name': 'barack', 'emb': []}, {'path': '/content/personas/pancho/pancho.jpeg', 'name': 'pancho', 'emb': []}, {'path': '/content/personas/pancho/pancho2.jpeg', 'name': 'pancho', 'emb': []}, {'path': '/content/personas/thalia/thalia1.jpg', 'name': 'thalia', 'emb': []}, {'path': '/content/personas/thalia/thalia2.jpg', 'name': 'thalia', 'emb': []}, {'path': '/content/personas/mario/mario1.png', 'name': 'mario', 'emb': []}, {'path': '/content/personas/mario/mario2.png', 'name': 'mario', 'emb': []}, {'path': '/content/personas/michelle/michelle_obama_1.jpeg', 'name': 'michelle', 'emb': []}, {'path': '/content/personas/michelle/michelle_obama_2.jpg', 'name': 'michelle', 'emb': []}]\n"
           ]
         }
       ],
       "source": [
+        "# leemos la lista de personalidades del dataset junto a un número reducido de fotos\n",
         "datapath = '/content/personas'\n",
         "ffaces = os.path.join(datapath, 'faces.txt')\n",
         "fdata = []\n",
@@ -257,14 +259,15 @@
         "    fdata.append({'path': ipath, 'name': icl, 'emb': []})\n",
         "    if icl not in dnames:\n",
         "        dnames[icl] = len(dnames)\n",
-        "print(dnames)"
+        "print(dnames)\n",
+        "print(fdata)"
       ]
     },
     {
       "cell_type": "code",
       "source": [
         "# inicializamos el modelo de rostros\n",
-        "app = FaceAnalysis(name='buffalo_l', providers=['CPUExecutionProvider'])  # Use 'CUDAExecutionProvider' for GPU\n",
+        "app = FaceAnalysis(name='buffalo_l', providers=['CUDAExecutionProvider'])  # Use 'CUDAExecutionProvider' for GPU\n",
         "app.prepare(ctx_id=0)  # ctx_id=-1 for CPU, 0 for GPU\n",
         "\n",
         "def get_face_embedding(image_path):\n",
@@ -285,14 +288,31 @@
       ],
       "metadata": {
         "id": "qAvj_YtWpeAi",
-        "outputId": "19c117b1-8f97-450f-c741-b1ebefb594d7",
+        "outputId": "dee721e4-156f-483d-db81-39256bd7e74a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "qAvj_YtWpeAi",
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "download_path: /root/.insightface/models/buffalo_l\n",
+            "Downloading /root/.insightface/models/buffalo_l.zip from https://github.com/deepinsight/insightface/releases/download/v0.7/buffalo_l.zip...\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|██████████| 281857/281857 [00:04<00:00, 58545.59KB/s]\n",
+            "/usr/local/lib/python3.11/dist-packages/onnxruntime/capi/onnxruntime_inference_collection.py:121: UserWarning: Specified provider 'CUDAExecutionProvider' is not in available provider names.Available providers: 'AzureExecutionProvider, CPUExecutionProvider'\n",
+            "  warnings.warn(\n"
+          ]
+        },
         {
           "output_type": "stream",
           "name": "stdout",
@@ -314,16 +334,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "id": "76abb174",
       "metadata": {
         "id": "76abb174"
       },
       "outputs": [],
       "source": [
-        "# recorremos la lista de rostros\n",
+        "# generamos un vector por cada rostro\n",
         "compute = True\n",
         "for person in fdata :\n",
+        "    print(person['path'])\n",
         "    emb = get_face_embedding(person['path'])\n",
         "    person['emb'] = emb"
       ]
@@ -651,8 +672,7 @@
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": "ml",
-      "language": "python",
+      "display_name": "Python 3",
       "name": "python3"
     },
     "language_info": {
@@ -669,8 +689,10 @@
     },
     "colab": {
       "provenance": [],
+      "gpuType": "T4",
       "include_colab_link": true
-    }
+    },
+    "accelerator": "GPU"
   },
   "nbformat": 4,
   "nbformat_minor": 5
